<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageview_udacity"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/imageview_udacity"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:src="@drawable/photo_landscape" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageview_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/margin_image"
                android:contentDescription="@string/imageview_logo"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/textview_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/margin_text"
                android:text="@string/logo_text"
                android:textColor="@color/udacity_color"
                android:textColorHighlight="@color/background_color"
                android:textColorLink="@color/udacity_color"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageview_phone_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/margin_image"
                android:contentDescription="@string/imageview_phone_contact"
                android:src="@drawable/ic_phone_contact" />

            <TextView
                android:id="@+id/textview_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/margin_text"
                android:autoLink="phone"
                android:text="@string/phone"
                android:textColor="@color/udacity_color"
                android:textColorHighlight="@color/background_color"
                android:textColorLink="@color/udacity_color"
                android:textSize="@dimen/textsize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageview_web_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/margin_image"
                android:contentDescription="@string/imageview_web_contact"
                android:src="@drawable/ic_web_contact" />

            <TextView
                android:id="@+id/textview_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/margin_text"
                android:autoLink="web"
                android:gravity="center_vertical"
                android:text="@string/web"
                android:textColor="@color/udacity_color"
                android:textColorHighlight="@color/background_color"
                android:textColorLink="@color/udacity_color"
                android:textSize="@dimen/textsize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageview_email_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/margin_image"
                android:contentDescription="@string/imageview_email_contact"
                android:src="@drawable/ic_email_contact" />

            <TextView
                android:id="@+id/textview_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/margin_text"
                android:autoLink="email"
                android:gravity="center_vertical"
                android:text="@string/email_textView"
                android:textColorHighlight="@color/background_color"
                android:textColorLink="@color/udacity_color"
                android:textSize="@dimen/textsize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageview_map_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/margin_image"
                android:contentDescription="@string/imageview_map_contact"
                android:src="@drawable/ic_map_contact" />

            <TextView
                android:id="@+id/textview_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/margin_text"
                android:autoLink="map"
                android:gravity="center_vertical"
                android:text="@string/address"
                android:textColor="@color/udacity_color"
                android:textColorHighlight="@color/background_color"
                android:textColorLink="@color/udacity_color"
                android:textSize="@dimen/textsize" />

        </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textview_credits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/icons_credits"
            android:textColor="@android:color/tab_indicator_text"
            android:textColorHighlight="@color/background_color"
            android:textColorLink="@android:color/tab_indicator_text"
            android:textSize="@dimen/credits_text_size" />


    </LinearLayout>

</ScrollView>